json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail14.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail14.json
snapshot_kind: text
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBrace,
        ],
        actual: Illegal,
        origin: "x",
        row: 1,
        column: 28,
    },
)
