json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail18_EXCLUDE.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail18_EXCLUDE.json
snapshot_kind: text
---
Ok(
    Array(
        [
            Array(
                [
                    Array(
                        [
                            Array(
                                [
                                    Array(
                                        [
                                            Array(
                                                [
                                                    Array(
                                                        [
                                                            Array(
                                                                [
                                                                    Array(
                                                                        [
                                                                            Array(
                                                                                [
                                                                                    Array(
                                                                                        [
                                                                                            Array(
                                                                                                [
                                                                                                    Array(
                                                                                                        [
                                                                                                            Array(
                                                                                                                [
                                                                                                                    Array(
                                                                                                                        [
                                                                                                                            Array(
                                                                                                                                [
                                                                                                                                    Array(
                                                                                                                                        [
                                                                                                                                            Array(
                                                                                                                                                [
                                                                                                                                                    Array(
                                                                                                                                                        [
                                                                                                                                                            Array(
                                                                                                                                                                [
                                                                                                                                                                    String(
                                                                                                                                                                        "Too deep",
                                                                                                                                                                    ),
                                                                                                                                                                ],
                                                                                                                                                            ),
                                                                                                                                                        ],
                                                                                                                                                    ),
                                                                                                                                                ],
                                                                                                                                            ),
                                                                                                                                        ],
                                                                                                                                    ),
                                                                                                                                ],
                                                                                                                            ),
                                                                                                                        ],
                                                                                                                    ),
                                                                                                                ],
                                                                                                            ),
                                                                                                        ],
                                                                                                    ),
                                                                                                ],
                                                                                            ),
                                                                                        ],
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        ],
                                                                    ),
                                                                ],
                                                            ),
                                                        ],
                                                    ),
                                                ],
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        ],
                    ),
                ],
            ),
        ],
    ),
)
