json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail19.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail19.json
---
Err(
    ExpectedTokenError {
        expected: [
            Colon,
        ],
        actual: Null,
        invalid_row: 1,
        invalid_col: 18,
    },
)
