json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail22.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail22.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Colon,
        invalid_row: 1,
        invalid_col: 26,
    },
)
